@@ -1,0 +1,1 @@
+#define HAVE_SIGNAL_H
